--- a/index.html
+++ b/index.html
@@ -4,21 +4,39 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="encrypter app">
-    <meta name="description" content="Aplicación web para encriptar y desencriptar textos de forma segura y sencilla. Protege tu información con cifrado avanzado y recupera tus datos en cualquier momento.">
+      <!-- Primary Meta Tags -->
+    <title>Encryptador Alura</title>
+    <meta name="title" content="Encryptador Alura" />
+    <meta name="description" content="Aplicación web para encriptar y desencriptar textos de forma segura y sencilla. Protege tu información con cifrado avanzado y recupera tus datos en cualquier momento." />
+
     <meta name="keywords" content="encrypt,decrypt">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="Spanish">
     <meta name="author" content="luiggy">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://encrypteralura.netlify.app/" />
+    <meta property="og:title" content="Encryptador Alura" />
+    <meta property="og:description" content="Aplicación web para encriptar y desencriptar textos de forma segura y sencilla. Protege tu información con cifrado avanzado y recupera tus datos en cualquier momento." />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://encrypteralura.netlify.app/" />
+    <meta property="twitter:title" content="Encryptador Alura" />
+    <meta property="twitter:description" content="Aplicación web para encriptar y desencriptar textos de forma segura y sencilla. Protege tu información con cifrado avanzado y recupera tus datos en cualquier momento." />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <title>Encryptador</title>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+    <noscript>
+      <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap" rel="stylesheet" />
+    </noscript>
+
   </head>
   <body>
     <div class="container-main">
@@ -47,7 +65,7 @@
       </div>
       <div class="container-right" id="container-right">
         <div class="container-right_info" id="container-right_info">
-          <img src="assets/img result.svg" alt="img result" />
+          <img loading="lazy" src="assets/img_result.svg" alt="img result" />
           <div class="msg">
             <h4>Ningun mensaje fue encontrado</h4>
             <p>Ingresa el texto que desees encriptar o desencriptar</p>
@@ -55,7 +73,11 @@
         </div>
         <div class="result visible" id="result">
           <p id="parrafo"></p>
-          <button class="btn btn-decrypt" id="clipboard">Copiar</button>
+          <div class="container-tooltip">
+            <button class="btn btn-decrypt" id="clipboard">Copiar</button>
+            <div id="tooltip" class="tooltip">Copiado!</div>
+          </div>
+         </div>
         </div>
       </div>
     </div>
