fix: image meta tag

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://encrypteralura.netlify.app/" />
     <meta property="og:title" content="Encryptador Alura" />
     <meta property="og:description" content="Aplicación web para encriptar y desencriptar textos de forma segura y sencilla. Protege tu información con cifrado avanzado y recupera tus datos en cualquier momento." />
-    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.svg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -28,6 +28,10 @@
     <meta property="twitter:title" content="Encryptador Alura" />
     <meta property="twitter:description" content="Aplicación web para encriptar y desencriptar textos de forma segura y sencilla. Protege tu información con cifrado avanzado y recupera tus datos en cualquier momento." />
     <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <meta name="og:image" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.svg" />
+    <meta name="og:image:secure_url"
+    content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.svg" />
 
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
