fix: image meta tag

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="twitter:url" content="https://encrypteralura.netlify.app/" />
     <meta property="twitter:title" content="Encryptador Alura" />
     <meta property="twitter:description" content="Aplicación web para encriptar y desencriptar textos de forma segura y sencilla. Protege tu información con cifrado avanzado y recupera tus datos en cualquier momento." />
-    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.svg" />
 
     <meta name="og:image" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.svg" />
     <meta name="og:image:secure_url"
