fix: image meta tag

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://encrypteralura.netlify.app/" />
+    <meta property="og:url" content="https://lgcarlinf.github.io/encrypter/" />
     <meta property="og:title" content="Encryptador Alura" />
     <meta property="og:description" content="Aplicación web para encriptar y desencriptar textos de forma segura y sencilla. Protege tu información con cifrado avanzado y recupera tus datos en cualquier momento." />
     <meta property="og:image" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.svg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://encrypteralura.netlify.app/" />
+    <meta property="twitter:url" content="https://lgcarlinf.github.io/encrypter/" />
     <meta property="twitter:title" content="Encryptador Alura" />
     <meta property="twitter:description" content="Aplicación web para encriptar y desencriptar textos de forma segura y sencilla. Protege tu información con cifrado avanzado y recupera tus datos en cualquier momento." />
     <meta property="twitter:image" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.svg" />
