--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <meta name="og:image:secure_url"
     content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.svg" />
 
+    <meta property="og:image" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.svg">
+
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
