--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
     <meta property="twitter:image" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.svg" />
 
     <meta name="og:image" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.svg" />
-    <meta name="og:image:secure_url"
-    content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.svg" />
-
-    <meta property="og:image" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.svg">
+    <meta name="og:image:secure_url" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.svg" />
 
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
