fix: image meta tag extension

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
     <meta property="og:url" content="https://lgcarlinf.github.io/encrypter/" />
     <meta property="og:title" content="Encryptador Alura" />
     <meta property="og:description" content="Aplicación web para encriptar y desencriptar textos de forma segura y sencilla. Protege tu información con cifrado avanzado y recupera tus datos en cualquier momento." />
-    <meta property="og:image" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.svg" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://lgcarlinf.github.io/encrypter/" />
     <meta property="twitter:title" content="Encryptador Alura" />
     <meta property="twitter:description" content="Aplicación web para encriptar y desencriptar textos de forma segura y sencilla. Protege tu información con cifrado avanzado y recupera tus datos en cualquier momento." />
-    <meta property="twitter:image" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.svg" />
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.png" />
 
-    <meta name="og:image" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.svg" />
-    <meta name="og:image:secure_url" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.svg" />
+    <meta name="og:image" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.png" />
+    <meta name="og:image:secure_url" content="https://raw.githubusercontent.com/lgcarlinf/cdnTest/main/assets/img_result.png" />
 
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
