chore: prueba readme 2

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <div class="container-left">
         <div class="container-input">
           <img src="assets/logo.svg" alt="logo alura" />
+          <p>prueba</p>
           <textarea
             class="input-text"
             name="texto"
